[gd_scene load_steps=7 format=2]

[ext_resource path="res://Background/background.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/SummaryReport/Panel2.gd" type="Script" id=3]
[ext_resource path="res://Images/bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/left.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[node name="StudentsNode" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 290.722, 511.707 )
scale = Vector2( 0.295, 0.931 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 34.6701
margin_top = 137.212
margin_right = 453.67
margin_bottom = 220.212
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ClassName"
uppercase = true

[node name="Panel2" type="Panel" parent="."]
margin_top = 40.0
margin_right = 535.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Board" type="Sprite" parent="Panel2"]
position = Vector2( 289.457, 461.393 )
scale = Vector2( 0.566, 0.693 )
texture = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel2/Board"]
margin_left = -405.0
margin_top = -383.0
margin_right = 392.0
margin_bottom = 366.0

[node name="list" type="VBoxContainer" parent="Panel2/Board/ScrollContainer"]

[node name="HTTPRequest" type="HTTPRequest" parent="Panel2"]

[node name="Bbutton" type="Sprite" parent="."]
position = Vector2( 67.671, 57.499 )
scale = Vector2( 0.131, 0.089 )
texture = ExtResource( 5 )

[node name="BackButton" type="Button" parent="Bbutton"]
margin_left = -316.0
margin_top = -406.0
margin_right = 335.0
margin_bottom = 355.0
flat = true
[connection signal="request_completed" from="Panel2/HTTPRequest" to="Panel2" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Bbutton/BackButton" to="Panel2" method="_on_BackButton_pressed"]
